test_suite5/ALAN/test_suite/alan-2022-examples/failing/005160_mutation.alan
source X begin leave XaC i() end
